[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/visual/sprites/Jeff.png" type="Texture" id=1]
[ext_resource path="res://scripts/JeffNode.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 50.0
height = 15.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "talk",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ) ],
"loop": false,
"name": "blink",
"speed": 25.0
} ]

[node name="Jeff" type="Area2D"]
position = Vector2( 448, 896 )
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
script = ExtResource( 2 )

[node name="JeffShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="JeffFace" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 8 )
animation = "idle"

[node name="Tween" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_Jeff_input_event"]
[connection signal="animation_finished" from="JeffFace" to="." method="_on_JeffFace_animation_finished"]
